--- a/config.html
+++ b/config.html
@@ -197,19 +197,19 @@
         <th colspan='1'><div class='heading'>Value</div></th>
       </tr>
       <tr>
-        <td><div class='bodytext'>Temperature</div></td>
+        <td><div class='bodytext'>Temperature (°C)</div></td>
         <td><div class='tabledata' id = 'tmp'></div></td>
       </tr>
       <tr>
-        <td><div class='bodytext'>Humidity</div></td>
+        <td><div class='bodytext'>Humidity (%)</div></td>
         <td><div class='tabledata' id = 'hum'></div></td>
       </tr>
         <tr>
-        <td><div class='bodytext'>Dew Point</div></td>
+        <td><div class='bodytext'>Dew Point (°C)</div></td>
         <td><div class='tabledata' id = 'dew'></div></td>
       </tr>
 	    <tr>
-        <td><div class='bodytext'>Sky Temperature</div></td>
+        <td><div class='bodytext'>Sky Temperature (°C)</div></td>
         <td><div class='tabledata' id = 'cloud'></div></td>
       </tr>
 	  	    <tr>
@@ -217,11 +217,11 @@
         <td><div class='tabledata' id = 'rain'></div></td>
       </tr>
 	  	    <tr>
-        <td><div class='bodytext'>Sky Quality Meter</div></td>
+        <td><div class='bodytext'>Sky Quality Meter (mag/arcsec²)</div></td>
         <td><div class='tabledata' id = 'sqm'></div></td>
       </tr>
 	  	    <tr>
-        <td><div class='bodytext'>Wind</div></td>
+        <td><div class='bodytext'>Wind (km/h)</div></td>
         <td><div class='tabledata' id = 'wind'></div></td>
       </tr>
       </table>
@@ -288,6 +288,47 @@
   <label for='ssid'>  SSID</label><br>	
   <input type='text' id='pwd' name='pwd'>
   <label for='pwd'>  Password</label><br>
+  <form>
+    
+	    <main class='container' style='margin-top:70px'>
+		<div class='category'>Safety Monitor</div>
+      <div style='border-radius: 10px !important;'>
+      <table style='width:50%'>
+      <colgroup>
+        <col span='1' style='background-color:rgb(230,230,230); width: 40%; color:#000000 ;'>
+        <col span='1' style='background-color:rgb(200,200,200); width: 15%; color:#000000 ;'>
+        <col span='1' style='background-color:rgb(180,180,180); width: 25%; color:#000000 ;'>
+      </colgroup>
+      <col span='2'style='background-color:rgb(0,0,0); color:#FFFFFF'>
+      <col span='2'style='background-color:rgb(0,0,0); color:#FFFFFF'>
+      <col span='2'style='background-color:rgb(0,0,0); color:#FFFFFF'>
+	  </colgroup>
+      <col span='3'style='background-color:rgb(0,0,0); color:#FFFFFF'>
+      <col span='3'style='background-color:rgb(0,0,0); color:#FFFFFF'>
+      <col span='3'style='background-color:rgb(0,0,0); color:#FFFFFF'>
+      <tr>
+        <th colspan='1'><div class='heading'>Condition</div></th>
+        <th colspan='1'><div class='heading'>Value</div></th>
+		<th colspan='1'><div class='heading'>Is Safe ?</div></th>
+      </tr>
+      <tr>
+        <td><div class='bodytext'>Sky Temperature <=</div></td>
+        <td><input type='text' id='cloudcond' name='cloudcond' placeholder=''</td>
+		<td><div class='bodytext' id = 'cloudsafe'> No </div></td>
+      </tr>
+      <tr>
+        <td><div class='bodytext'>Rain =</div></td>
+        <td><input type='text' id='raincond' name='raincond' placeholder=''</td>
+		<td><div class='bodytext' id = 'rainsafe'> No </div></td>
+      </tr>
+        <tr>
+        <td><div class='bodytext'>Wind Speed <=</div></td>
+        <td><input type='text' id='windcond' name='windcond' placeholder=''</td>
+		<td><div class='bodytext' id = 'windsafe'> No </div></td>
+      </tr>
+      </table>
+    </div>
+	
 </form>
 <span style='color: #003366;'>
 
@@ -305,6 +346,11 @@ Save to EEPROM
 </body>
 <script>
   var Socket;
+  
+  var cloudval;
+  var rainval;
+  var windval;
+  
   var starting=true;
   document.getElementById('BTN_SEND_BACK').addEventListener('click', button_send_back);
   document.getElementById('BTN_GET').addEventListener('click', button_get);
@@ -351,6 +397,10 @@ Save to EEPROM
 	if (isEmpty(ssid.value)) field_not_valid=true;
 	if (isEmpty(pwd.value)) field_not_valid=true;
 	
+	if (isEmpty(cloudcond.value)) field_not_valid=true;
+	if (isEmpty(raincond.value)) field_not_valid=true;
+	if (isEmpty(windcond.value)) field_not_valid=true;
+	
 	if (field_not_valid==true)
 	{
 	button_get();
@@ -383,7 +433,10 @@ Save to EEPROM
 	_APIkey: APIkey.value,
 	_channelid: channelid.value,
 	_ssid: ssid.value,
-	_pwd: pwd.value
+	_pwd: pwd.value,
+	_cloudcond: cloudcond.value,
+	_raincond: raincond.value,
+	_windcond: windcond.value
 	};
 	
 	Socket.send(JSON.stringify(msg));
@@ -402,14 +455,16 @@ Save to EEPROM
 
 if(obj.answer == 'SEND_READINGS'){
 
-
 	document.getElementById('tmp').innerHTML = obj.tmp;
 	document.getElementById('hum').innerHTML = obj.hum;
 	document.getElementById('dew').innerHTML = obj.dew;
 	document.getElementById('cloud').innerHTML = obj.cloud;
+	cloudval=parseInt(obj.cloud);
 	document.getElementById('rain').innerHTML = obj.rain;
+	rainval=parseInt(obj.rain);
 	document.getElementById('sqm').innerHTML = obj.sqm;
 	document.getElementById('wind').innerHTML = obj.wind;
+	windval=parseInt(obj.wind);
     document.getElementById('time').innerHTML = dt.toLocaleTimeString();
     document.getElementById('date').innerHTML = dt.toLocaleDateString();
     console.log(obj.tmp);
@@ -419,8 +474,17 @@ if(obj.answer == 'SEND_READINGS'){
 	console.log(obj.rain);
 	console.log(obj.sqm);
 	console.log(obj.wind);
-
-
+	
+	
+	if(cloudval<= parseInt(document.getElementById('cloudcond').value)) document.getElementById('cloudsafe').innerHTML = 'Safe'; 
+	else document.getElementById('cloudsafe').innerHTML = 'Unsafe'; 
+	
+	if(rainval== 0) document.getElementById('rainsafe').innerHTML = 'Safe'; 
+	else document.getElementById('rainsafe').innerHTML = 'Unsafe'; 
+	
+	if(windval<= parseFloat(document.getElementById('windcond').value)) document.getElementById('windsafe').innerHTML = 'Safe'; 
+	else document.getElementById('windsafe').innerHTML = 'Unsafe'; 
+	
 	if(starting==true)
 	{
 	button_get();
@@ -454,6 +518,9 @@ else if(obj.answer == 'SEND_EEPROM'){
 	document.getElementById('channelid').value = obj.channelid;
 	document.getElementById('ssid').value = obj.ssid;
 	document.getElementById('pwd').value = obj.pwd;
+	document.getElementById('cloudcond').value = obj.cloudcond;
+	document.getElementById('raincond').value = obj.raincond;
+	document.getElementById('windcond').value = obj.windcond;
 
 	}
 	
